# tidenet.app

./: .gitignore  ARCHITECTURE.md  Dockerfile.backend  Dockerfile.frontend  README.md  api_server.py  compose-dev.yml  deploy.sh  docker-compose.yml  environment.yml  index.html  main.py  models.py  nginx.conf  nginx_dev.conf  package.json  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  question.md
app/: db.py  main.py  models.py
app/api/: api.py
app/api/endpoints/: data.py  stations.py  testing.py
app/dependencies/: redis.py
app/internal/: tide_constants.py  utilities.py
app/static/: index.html
app/tide-data/coef/: coef_10_North-Shields.json  coef_11_Workington.json  coef_12_Plymouth.json  coef_13_Newhaven.json  coef_14_Whitby.json  coef_15_Liverpool.json  coef_16_Hinkley-Point.json  coef_17_Harwich.json  coef_18_Newlyn.json  coef_19_Portsmouth.json  coef_1_Lowestoft.json  coef_20_Immingham.json  coef_21_St-Marys.json  coef_22_Portrush.json  coef_23_Holyhead.json  coef_24_Fishguard.json  coef_25_Ullapool.json  coef_26_Leith.json  coef_27_Mumbles.json  coef_28_Newport.json  coef_29_Aberdeen.json  coef_2_Avonmouth-Portbury.json  coef_30_Milford-Haven.json  coef_31_Millport.json  coef_32_Bangor.json  coef_33_Wick.json  coef_34_Port-Erin.json  coef_35_Kinlochbervie.json  coef_36_Tobermory.json  coef_37_Portpatrick.json  (+12 more)
data/: stations.csv
db_scripts/: check_duplicates.py  fetch_historical.py  fetch_latest.py  run_pipeline.sh  setup_env.sh
front/: package-lock.json  package.json
front/src/: App.jsx  index.css  main.jsx
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  index.css  main.jsx
scripts/: add_constraint.py  check_duplicates.py  csv_loader.py  fetch_historical.py  fetch_latest.py  init_db.py  load_from_store.py  models.py  populate_station_stats.py  remove_duplicates.py  tide_constants.py  tide_table.py  utilities.py
(+75 files in other folders)
