[project]
name = "SurgeNTSLF"
version = "0.1.0"
description = ""
authors = [
    {name = "Nick Andreakos",email = "18707825+nikolisan@users.noreply.github.com"}
]
readme = "README.md"

requires-python = ">=3.14"
dependencies = [
    "requests (>=2.32.5,<3.0.0)",
    "numpy (>=2.3.4,<3.0.0)",
    "pandas (>=2.3.3,<3.0.0)",
    "fastapi (>=0.119.0,<0.120.0)",
    "psycopg[binary,pool] (>=3.2.10,<4.0.0)",
    "sqlalchemy (>=2.0.44,<3.0.0)",
    "dotenv (>=0.9.9,<0.10.0)",
    "tqdm (>=4.67.1,<5.0.0)",
    "aiohttp (>=3.13.1,<4.0.0)",
    "uvicorn (>=0.38.0,<0.39.0)"
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
