[project]
name = "SurgeNTSLF"
version = "0.1.0"
description = ""
authors = [
    {name = "Nick Andreakos",email = "18707825+nikolisan@users.noreply.github.com"}
]
readme = "README.md"

requires-python = ">=3.11,<3.14"
dependencies = [
    "requests (>=2.32.5,<3.0.0)",
    "numpy (>=2.3.4,<3.0.0)",
    "pandas (>=2.3.3,<3.0.0)",
    "fastapi (>=0.119.0,<0.120.0)",
    "psycopg[binary,pool] (>=3.2.10,<4.0.0)",
    "sqlalchemy[asyncio] (>=2.0.46,<3.0.0)",
    "dotenv (>=0.9.9,<0.10.0)",
    "tqdm (>=4.67.1,<5.0.0)",
    "aiohttp (>=3.13.1,<4.0.0)",
    "uvicorn (>=0.38.0,<0.39.0)",
    "pendulum (>=3.1.0,<4.0.0)",
    "pydantic (>=2.12.3,<3.0.0)",
    "pydantic-extra-types[pendulum] (>=2.10.6,<3.0.0)",
    "ruptures (>=1.1.10,<2.0.0)",
    "scikit-learn (>=1.7.2,<2.0.0)",
    "redis (>=7.1.0,<8.0.0)",
    "gunicorn (>=23.0.0,<24.0.0)",
    "utide (>=0.3.1,<0.4.0)",
    "scipy (>=1.17.0,<2.0.0)",
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "matplotlib (>=3.10.7,<4.0.0)",
]
